--- a/presto-native-tests/pom.xml
+++ b/presto-native-tests/pom.xml
@@ -156,6 +156,11 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.prestodb.tempto</groupId>
+            <artifactId>tempto-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
